# automation-test

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.key  .secrets.salt  Dockerfile  Makefile  README.md  check_env.py  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt
.claude/: CLAUDE.md  README.md  quick_start.md  testing_flow.md  testing_guidelines.md  testing_plan.md
.claude/templates/: module_list.md  problem_tracking.md  testing_plan_template.md
.github/workflows/: ci.yml  test.yml
.trae/documents/: claude_documents_modification_plan.md  directory_structure_fix_plan.md  enterprise_improvement_plan.md  playwright_rewrite_plan.md  playwright_rewrite_progress.md  project_structure_optimization_plan.md
.trae/rules/: project-info.md  project-prompt.md  project-rule.md
allure-report/: index.html
allure-report/artifacts/allure-report-chromium-3.10/: index.html
allure-report/artifacts/allure-report-chromium-3.11/: index.html
allure-report/artifacts/allure-report-chromium-3.12/: index.html
allure-report/artifacts/allure-report-firefox-3.10/: index.html
allure-report/artifacts/allure-report-firefox-3.11/: index.html
allure-report/artifacts/allure-report-firefox-3.12/: index.html
allure-report/artifacts/security-report/: security-report-20260403_071016.json  security-report-20260403_071725.json
allure-report/artifacts/test-summary-chromium-3.10/: test-summary.html  test-summary.json
allure-report/artifacts/test-summary-chromium-3.11/: test-summary.html  test-summary.json
allure-report/artifacts/test-summary-chromium-3.12/: test-summary.html  test-summary.json
allure-report/artifacts/test-summary-firefox-3.10/: test-summary.html  test-summary.json
allure-report/artifacts/test-summary-firefox-3.11/: test-summary.html  test-summary.json
allure-report/artifacts/test-summary-firefox-3.12/: test-summary.html  test-summary.json
allure-report/data/: behaviors.json  packages.json  suites.json  timeline.json
allure-report/data/attachments/: 1312f439f3157f8b.txt  16042d3a6e411534.txt  1859391b1630edf1.txt  23e28f8db743724a.txt  2e4b296799c2b80b.txt  34a373a5bddaab6e.txt  3744045bbeedb9ea.txt  3ceafc1ae722e164.txt  3f9dcded41d536cb.txt  453a2fbb1cfec3a6.txt  4cbcdbc76d3d43ba.txt  573e56f7d6550a9f.txt  62fecd0c0c557b1e.txt  7d96ebfe5478aa45.txt  911b455cf63cbb29.txt  917af9ce3dd057ed.txt  9759f1244adbee.txt  989109c8b3cb4db2.txt  9b30f6aee0eab135.txt  9b5c9fc74b5a707e.attach  a64ee2d603a0342c.txt  aefdcbb582586842.txt  b1456917744be4ee.txt  b5aa12850b33822.txt  b9f101b39e42fb75.txt  (+10 more)
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: severity.json  status-chart.json
ci-cd/: .gitlab-ci.yml  Jenkinsfile
config/: categories.json  settings.py  validators.py
config/envs/: .env.base  .env.development  .env.example  .env.full  .env.minimal  .env.staging  .env.standard  .env.testing
config/settings_dir/: __init__.py  base.py  development.py  production.py  testing.py
core/exceptions/: __init__.py
core/models/: __init__.py
core/pages/: __init__.py  base_page.py  locators.py  login_page.py  login_page_semantic.py
core/utils/: __init__.py  alert_manager.py  allure_helper.py  api_client.py  api_contract_tester.py  assertions.py  audit_logger.py  browser_pool.py  circuit_breaker.py  compliance_checker.py  data_cache.py  data_factory.py  data_masking.py  data_provider.py  db_manager.py  exception_handler.py  locators.py  logger.py  mock_server.py  path_helper.py  report_generator.py  secrets_manager.py  smart_waiter.py  test_advisor.py  test_data_loader.py  test_data_manager.py  test_monitor.py
docs/: CI_CD.md  FEATURES.md  GITHUB_SETUP.md  GUIDE.md  README.md
docs/api/: API_DOCUMENTATION.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/best-practices/: DIRECTORY_STRUCTURE.md  LOCATORS_GUIDE.md  PLAYWRIGHT_GUIDE.md
docs/ci-cd/: CI_CD.md  GITHUB_PAGES_SETUP.md  GITHUB_SETUP.md  TROUBLESHOOTING.md
docs/core-features/: ALLURE_CATEGORIES.md  ALLURE_CATEGORIES_MIGRATION.md  FEATURES.md  TEST_REPORT_ALLURE_CATEGORIES.md
docs/deployment/: DEPLOYMENT_AND_OPERATION.md
docs/development/: DEVELOPMENT_GUIDELINES.md
docs/getting-started/: GUIDE.md  README.md
docs/troubleshooting/: TROUBLESHOOTING.md
locators/: login_page.yaml  login_page_semantic.yaml
reports/: test-summary.html  test-summary.json  test-trend.html
reports/history/: history_20260327_233130.json  history_20260327_233140.json  history_20260327_233142.json
scripts/: ai_code_checker.py  config_wizard.py  interactive_runner.py  secrets_tool.py  security_scan.py
scripts/automation/: prepare_allure.py
scripts/cli/: config_wizard.py  interactive_runner.py
scripts/security/: secrets_tool.py  security_scan.py
scripts/utils/: config_checker.py
tests/: __init__.py  conftest.py
tests/api/: README.md  __init__.py  test_mock_api.py  test_mock_api_example.py  test_user_api.py  test_user_api_example.py
tests/e2e/: __init__.py  test_semantic_locators.py  test_semantic_locators_example.py  test_todomvc.py
tests/integration/: __init__.py  test_mock_server.py
tests/sample_tests/: test_login_example.py  test_mock_server.py  test_sample.py  test_semantic_locators.py
tests/unit/: __init__.py  test_categories_demo.py  test_sample.py
tests/utils/: attachment_manager.py  report_manager.py  video_manager.py
utils/: __init__.py
utils/api/: api_client.py  api_contract_tester.py  assertions.py  circuit_breaker.py
utils/browser/: browser_pool.py  smart_waiter.py
utils/common/: exception_handler.py  path_helper.py
utils/data/: data_cache.py  data_factory.py  data_provider.py  test_data_loader.py  test_data_manager.py
utils/reporting/: __init__.py  alert_manager.py  generator.py  history_manager.py  models.py  report_generator.py  test_advisor.py  test_monitor.py  worker_merger.py
utils/security/: audit_logger.py  compliance_checker.py  data_masking.py  secrets_manager.py
(+557 files in other folders)
