[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-test"
version = "1.0.0"
description = "企业级自动化测试框架"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["testing", "automation", "playwright", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/yourusername/automation-test"
Documentation = "https://github.com/yourusername/automation-test/docs"
Repository = "https://github.com/yourusername/automation-test.git"
Issues = "https://github.com/yourusername/automation-test/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "config*", "tests*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "__pycache__", "venv", ".venv"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.pylint.messages_control]
disable = [
    "C0103",  # 变量名格式
    "C0114",  # 缺少模块文档字符串
    "C0115",  # 缺少类文档字符串
    "C0116",  # 缺少函数文档字符串
    "R0903",  # 类方法太少
    "R0913",  # 参数太多
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "tests",
    "venv",
    ".venv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --html=reports/report.html --self-contained-html --cov=core --cov=config --cov-report=term-missing --cov-report=html:reports/coverage-html --cov-report=xml:reports/coverage.xml --cov-fail-under=80"
markers = [
    "smoke: 冒烟测试",
    "regression: 回归测试",
    "ui: UI测试",
    "api: API测试",
    "slow: 慢速测试",
    "login: 登录相关测试",
    "logout: 登出相关测试",
    "payment: 支付相关测试",
    "checkout: 结账相关测试",
    "search: 搜索相关测试",
    "admin: 管理员相关测试",
    "critical: 关键测试",
    "positive: 正向测试",
    "negative: 负向测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["core", "config"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.coverage.html]
directory = "reports/coverage-html"
title = "测试覆盖率报告"
