[build-system]
# 打包编译依赖
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# 项目基础信息
name = "automation-test"
version = "1.0.0"
description = "企业级 Playwright + Pytest 自动化测试框架"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tpyong", email = "tangpeiyong@hotmail.com"}
]
# 项目搜索标签
keywords = ["testing", "automation", "playwright", "pytest", "automation-test"]
# 项目分类标识（给工具/平台识别）
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

# 全套必备依赖（UI/接口/报告/并发/重跑/数据构造/加密/类型检查）
dependencies = [
    # 核心测试框架
    "pytest>=7.0.0",

    # Playwright UI 自动化
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",

    # Allure 精美测试报告
    "allure-pytest>=2.13.0",
    "allure-python-commons>=2.13.0",

    # 高级运行插件
    "pytest-xdist>=3.5.0",        # 多进程并发执行用例
    "pytest-rerunfailures>=13.0", # 失败用例自动重跑
    "pytest-cov>=4.1.0",         # 代码覆盖率统计
    "pytest-html>=4.0.0",        # 简易HTML报告

    # 环境 & 配置文件
    "python-dotenv>=1.0.0",      # 读取.env环境变量
    "PyYAML>=6.0.0",             # 读取YAML配置

    # 接口测试核心
    "requests>=2.31.0",

    # 伪造测试数据
    "Faker>=20.0.0",

    # 加密加解密工具
    "cryptography>=41.0.0",

    # 代码类型静态检查
    "mypy>=1.0.0",
]

# 项目仓库链接
[project.urls]
Homepage = "https://github.com/Tpyong/automation-test"
Documentation = "https://github.com/Tpyong/automation-test"
Repository = "https://github.com/Tpyong/automation-test.git"
Issues = "https://github.com/Tpyong/automation-test/issues"

# 打包目录配置：只打包核心代码，排除测试/环境/报告
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "config*"]
exclude = ["tests", "reports", "venv", ".venv", "dist", "build"]

# ==============================
# Black 代码格式化（统一代码风格）
# ==============================
[tool.black]
line-length = 100                  # 单行最大长度
target-version = ['py311']         # 适配Python3.11语法
include = '\.pyi?$'                # 只格式化py/pyi文件
# 格式化时跳过的目录
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | reports
)/
'''

# ==============================
# isort 导入包排序（规整导包顺序）
# ==============================
[tool.isort]
profile = "black"                  # 兼容black格式
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "__pycache__", "venv", ".venv", "reports"]

# ==============================
# flake8 代码语法巡检
# ==============================
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]  # 忽略和black冲突的规则
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist", "reports"]
per-file-ignores = [
    "__init__.py:F401",           # __init__允许导入不使用
]

# ==============================
# pylint 代码规范弱校验（适配测试脚本）
# ==============================
[tool.pylint.messages_control]
disable = [
    "C0103",  # 宽松变量名校验
    "C0114",  # 不强制模块注释
    "C0115",  # 不强制类注释
    "C0116",  # 不强制函数注释
    "R0903",  # 允许类方法少
    "R0913",  # 允许函数参数多
]

# ==============================
# mypy 静态类型检查（完整带注释，方便后期改）
# ==============================
[tool.mypy]
python_version = "3.11"                  # 绑定Python版本
warn_return_any = true                   # 警告未明确返回类型
warn_unused_configs = true               # 警告无效配置
disallow_untyped_defs = false            # 允许不写类型注解（测试脚本刚需）
disallow_incomplete_defs = false         # 允许不完整类型
check_untyped_defs = true                # 仍检查无注解代码
disallow_untyped_decorators = false      # 装饰器免强类型
no_implicit_optional = true              # 可选参数必须显式写
warn_redundant_casts = true             # 警告多余类型强转
warn_unused_ignores = true              # 警告无效忽略注解
warn_no_return = true                   # 警告函数缺返回值
warn_unreachable = true                # 警告死代码
strict_equality = true                 # 严格全等判断
show_error_codes = true               # 显示错误码
show_column_numbers = true            # 显示报错行列
exclude = [                           # 跳过类型检查目录
    "tests",
    "venv",
    ".venv",
    "reports"
]

# ==============================
# Pytest 运行核心配置
# ==============================
[tool.pytest.ini_options]
testpaths = ["tests"]                                  # 用例存放目录
python_files = ["test_*.py", "*_test.py"]              # 识别用例文件
python_classes = ["Test*"]                             # 识别用例类
python_functions = ["test_*"]                         # 识别用例函数
# 默认运行参数：详情+简短报错+多报告+覆盖率门槛
addopts = "-v --tb=short --strict-markers --html=reports/report.html --self-contained-html --cov=core --cov=config --cov-report=term-missing --cov-report=html:reports/coverage --cov-report=xml:reports/coverage.xml --cov-fail-under=80"
# 用例标签（可按标签跑指定用例）
markers = [
    "smoke: 冒烟测试",
    "regression: 回归测试",
    "ui: UI测试",
    "api: API测试",
    "slow: 慢速用例",
    "login: 登录模块",
    "logout: 登出模块",
    "payment: 支付模块",
    "checkout: 结账模块",
    "search: 搜索模块",
    "admin: 管理员模块",
    "critical: 核心关键用例",
    "positive: 正向场景",
    "negative: 反向异常场景",
]
# 忽略无关警告
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==============================
# Coverage 覆盖率配置
# ==============================
[tool.coverage.run]
source = ["core", "config"]  # 只统计核心目录覆盖率
branch = true                # 统计分支覆盖率
omit = [                     # 忽略统计目录
    "*/__pycache__/*",
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/reports/*",
]

[tool.coverage.report]
show_missing = true         # 显示未覆盖代码
skip_covered = false
precision = 2               # 覆盖率小数精度
fail_under = 80            # 低于80%覆盖率拦截
exclude_lines = [           # 免统计代码行
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == __main__:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.coverage.html]
directory = "reports/coverage"  # 覆盖率HTML报告输出目录
title = "测试覆盖率报告"